--- a/Maw and Paw ATL/Info.plist
+++ b/Maw and Paw ATL/Info.plist
@@ -20,6 +20,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Maw and Paw would like your permission to use location features of your device to plot locations during distance training.  This information will not be shared outside of the app.</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Maw and Paw would like your permission to use location features of your device to plot locations during distance training.  This information will not be shared outside of the app.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Maw and Paw would like your permission to use location features of your device to plot locations during distance training.  This information will not be shared outside of the app.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
